refactor GameSessionServiceImpl